# walrus-decentrasafe

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Justfile  Makefile  README.md  diesel.toml  docker-compose.yml
.github/workflows/: docker.yml
migrations/2024-09-13-063146_create_blobs_table/: down.sql  up.sql
migrations/2024-09-13-132839_create_manifests/: down.sql  up.sql
move/registry/: Move.toml
move/registry/sources/: registry.move
move/registry/tests/: registry_tests.move
site/: .gitignore  go.mod  hugo.yaml
site/content/: _index.md
site/content/docs/: _index.md
src/: lib.rs  logger.rs  main.rs  models.rs  schema.rs  sqlite.rs  walrus.rs
tests/: walrus_test.rs
